# CPlusPlus

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
.github/workflows/: ci.yml  cmake-multi-platform.yml
App/: BaseType.cpp  BaseType.h  CMakeLists.txt  ClassType.h  CreateError.cpp  CreateError.h  ModulesType.cpp  ModulesType.h  STLModule.cpp  STLModule.h
